New Textures and Graphic Side